# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  doxygen.config  setup.sh
.github/workflows/: sa_ctest.yml  sa_ctest_macos.yml  sa_ctest_unix.yml  sa_ctest_win.yml  sa_doxygen.yml
Doc/: GenerateDoc.bat  doxygen.config
Include/SA/: Config.hpp  Dummy.hpp
Include/SA/API/: GLFW.hpp
Include/SA/Collections/: Algorithms  Assets  Debug  Input  Maths  Matrix  Render  Serialize  Space  Thread  Time  Types  Window
Include/SA/Core/: Config.hpp  Debug.hpp
Include/SA/Core/Algorithms/: BitScanForward.hpp  Cast.hpp  Equals.hpp  MemCopy.hpp  MemFill.hpp  MemMove.hpp  MemReset.hpp  ReadFile.hpp  SizeOf.hpp
Include/SA/Core/Debug/: ArgsStr.hpp  ArgsStr.inl  Config.hpp  ConsoleColor.hpp  Debug.hpp  Log.hpp  LogChannel.hpp  Logger.hpp  ToString.hpp  ToString.inl
Include/SA/Core/Misc/: Random.hpp
Include/SA/Core/Serialize/: MapSerializer.hpp  MapSerializer.inl  PairSerializer.hpp  PairSerializer.inl  SerializeReader.hpp  Serializer.hpp  Serializer.inl  SetSerializer.inl  StringSerializer.hpp  StringSerializer.inl  VectorSerializer.hpp  VectorSerializer.inl
Include/SA/Core/Support/: Architectures.hpp  Compilers.hpp  EnvironmentVariable.hpp  Intrinsics.hpp  ModuleAPI.hpp  Platforms.hpp  Pragma.hpp  Stringify.hpp  Version.hpp  Windows.hpp
Include/SA/Core/Thread/: ThreadJoinMode.hpp
Include/SA/Core/Time/: Chrono.hpp  DateTime.hpp  Hour.hpp  MilliSecond.hpp  Minute.hpp  Second.hpp  Tick.hpp  Time.hpp
Include/SA/Core/Types/: ASystem.hpp  Abstract.hpp  Abstract.inl  Char.hpp  Handle.hpp  Int.hpp  Interface.hpp  Interface.inl
Include/SA/Engine/: Dummy.hpp
Include/SA/Engine/HI/: Cast.hpp  HardwareInterface.hpp  HardwareInterfaceBase.hpp  InterfaceList.hpp  InterfaceList.inl  PolymorphicVector.hpp  ResourceHolder.hpp  ResourceHolder.inl
Include/SA/Input/: Config.hpp  InputContext.hpp  InputHandler.hpp  InputKey.hpp  InputKeyState.hpp  InputSystem.hpp  Key.hpp
Include/SA/Input/Base/: AInputBase.hpp  AInputInterface.hpp  AInputSystem.hpp  AInputWindowContext.hpp  AInputWindowContext.inl  Axis.hpp  IInputSystem.hpp  IInputSystem.inl  IInputWindowContext.hpp  IInputWindowContext.inl  InputBase.hpp  InputContext.hpp  InputContext.inl  Key.hpp  KeyState.hpp
Include/SA/Input/Bindings/: InputAction.hpp  InputBindingBase.hpp  InputRange.hpp  InputState.hpp
Include/SA/Input/GLFW/: GLFWInputInterface.hpp  GLFWInputMapping.hpp  GLFWInputSystem.hpp  GLFWInputWindowContext.hpp
Include/SA/Input/Types/: InputAction.hpp  InputAxis.hpp  InputBase.hpp  InputComposite.hpp  InputKey.hpp  InputRange.hpp  InputState.hpp
Include/SA/Maths/: Config.hpp
Include/SA/Maths/Algorithms/: Cos.hpp  Lerp.hpp  Sign.hpp  Sin.hpp  Sqrt.hpp  Tan.hpp
Include/SA/Maths/Matrix/: Matrix3.hpp  Matrix3.inl  Matrix3Base.hpp  Matrix3Base.inl  Matrix4.hpp  Matrix4.inl  Matrix4Base.hpp  Matrix4Base.inl  MatrixMajor.hpp
Include/SA/Maths/Misc/: Constants.hpp  Degree.hpp  (+3 more)
Include/SA/Render/: Config.hpp  Debug.hpp
Include/SA/SDK/: EnvironmentVariable.hpp
Include/SA/Window/: Config.hpp
Resources/Shaders/Deferred/: lit.frag  lit.vert  lit_composition.frag  lit_composition.vert
Resources/Shaders/Forward/: gizmo.frag  gizmo.vert  lit.frag  lit.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
Resources/Shaders/Lib/: camera.glsl  engine_constants.glsl  main_engine.glsl  model.glsl  normal_map.glsl  push_constant.glsl  renderAPI_spec.glsl
Source/SA/: Dummy.cpp
Source/SA/API/: GLFW.cpp
Source/SA/Engine/: Dummy.cpp
Source/SA/Input/: InputContext.cpp  InputHandler.cpp  InputSystem.cpp
Source/SA/SDK/: EnvironmentVariable.cpp
Tests/: CMakeLists.txt
Tests/Prototype/: AssetLibraryHelper.hpp  CMakeLists.txt  UnlitRenderer.hpp  main.cpp
Tests/UnitTests/: CMakeLists.txt  main.cpp
Tests/UnitTests/Core/: CMakeLists.txt
Tests/UnitTests/Core/Algorithms/: BitScanForwardTests.cpp  CMakeLists.txt  EqualsTests.cpp  MemCopyTests.cpp  MemFillTests.cpp  MemMoveTests.cpp  MemResetTests.cpp  SizeOfTests.cpp  main.cpp
Tests/UnitTests/Core/Debug/: ArgsStrTests.cpp  CMakeLists.txt  ExceptionTests.cpp  LoggingTests.cpp  ToStringTests.cpp  main.cpp
Tests/UnitTests/Core/Misc/: CMakeLists.txt  RandomTests.cpp  main.cpp
Tests/UnitTests/Core/Thread/: CMakeLists.txt  TheadPipelineEngineTests.cpp  TheadPipelineLoopTests.cpp  ThreadQueueTests.cpp  main.cpp
Tests/UnitTests/Core/Time/: CMakeLists.txt  ChronoTests.cpp  DateTimeTests.cpp  HourTests.cpp  MilliSecondTests.cpp  MinuteTests.cpp  SecondTests.cpp  TickTests.cpp  main.cpp
Tests/UnitTests/Core/Types/: CMakeLists.txt  CharTests.cpp  CharTests.hpp  EventTests.cpp  FlagsTests.cpp  FlagsTests.hpp  FuntionTests.cpp  HasMemberTests.cpp  IntTests.cpp  IntTests.hpp  InterfaceTests.cpp  main.cpp
Tests/UnitTests/HI/: CastTests.cpp  HardwareInterfaceBaseTests.cpp  HardwareInterfaceTests.cpp
Tests/UnitTests/Helper/: CMakeLists.txt
Tests/UnitTests/Helper/Include/: UnitTestHelper
Tests/UnitTests/Helper/Include/UTH/: Config.hpp  Counter.hpp  Group.hpp  Instance.hpp  Log.hpp  LogStream.hpp  Random.hpp  Step.hpp  StringToken.hpp  Test.hpp  UnitTestHelper.hpp  Verbosity.hpp
Tests/UnitTests/Helper/Include/UTH/Log/: ConsoleTheme.hpp  GroupLog.hpp  Log.hpp  MessageLog.hpp  RecapLog.hpp  TestLog.hpp
Tests/UnitTests/Helper/Source/UTH/: Counter.cpp  Group.cpp  Instance.cpp  Log.cpp  LogStream.cpp  StringToken.cpp  Test.cpp
Tests/UnitTests/Helper/Source/UTH/Log/: ConsoleTheme.cpp  GroupLog.cpp  Log.cpp  MessageLog.cpp  RecapLog.cpp  TestLog.cpp
Tests/UnitTests/Maths/: CMakeLists.txt
Tests/UnitTests/Maths/Algorithms/: CMakeLists.txt  CosSinTanTests.cpp  LerpTests.cpp  SignTests.cpp  SqrtTests.cpp  main.cpp
Tests/UnitTests/Maths/Matrix/: CMakeLists.txt  Matrix3Tests.cpp  Matrix4Tests.cpp  main.cpp
Tests/UnitTests/Maths/Misc/: CMakeLists.txt  DegreeTests.cpp  RadianTests.cpp  main.cpp
Tests/UnitTests/Maths/Space/: CMakeLists.txt  QuaternionTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp  main.cpp
(+947 files in other folders)
